# MNIST_CNN

./: .gitignore  CMakeLists.txt  README.md
include/: dataset.h  network.h
src/: dataset.cpp  main.cpp  network.cpp
